--- a/css/styles.scss
+++ b/css/styles.scss
@@ -5,7 +5,7 @@ $background-color: #001021;
 $text-color: #FAFAFF;
 $font-family: 'Arial', sans-serif;
 
-// Reset básico
+// Basic reset
 * {
     margin: 0;
     padding: 0;
@@ -19,16 +19,7 @@ body {
     line-height: 1.6;
 }
 
-/* Asegurarse de que las imágenes se adapten al contenido */
-img {
-    max-width: 100%;
-    height: auto;
-    display: block;
-    object-fit: cover; /* Esta propiedad asegura que la imagen cubra el área asignada sin deformarse */
-}
-
-
-// Header y navegación
+// Header y navigation
 header {
     background-color: $primary-color;
     padding: 1rem 0;
@@ -38,12 +29,13 @@ header {
         list-style: none;
         display: flex;
         justify-content: center;
+        flex-direction: column;
         gap: 2rem;
 
         li {
             a {
                 text-decoration: none;
-                color: white;
+                color: $text-color;
                 font-weight: bold;
 
                 &:hover {
@@ -54,7 +46,7 @@ header {
     }
 }
 
-// Secciones principales
+// Main sections
 main {
     padding: 2rem;
 
@@ -69,7 +61,9 @@ main {
         }
     }
 
-    // Stack Tecnológico
+
+
+    // Tech Stack
     #stack {
         .box {
             position: relative;
@@ -91,7 +85,7 @@ main {
                 font-weight: bold;
             }
         
-            // Estilo de la lista de tecnologías
+            // Style of the tech list
             .tecnologias {
                 display: flex;
                 flex-wrap: wrap;
@@ -99,7 +93,7 @@ main {
                 list-style: none;
                 gap: 1rem;
                 padding: 0;
-                margin-top: 1.5rem; // Separación con el título
+                margin-top: 1.5rem;
         
                 li {
                     background-color: $secondary-color;
@@ -118,7 +112,7 @@ main {
     }
 
 
-    // Proyectos
+    // Projects
     #proyectos {
         .proyecto {
             position: relative;
@@ -168,66 +162,73 @@ main {
         }
     }
 
-    .modal {
+    // Slider modal
+    #modal-slider {
         display: none;
         position: fixed;
         z-index: 1000;
-        left: 0;
         top: 0;
+        left: 0;
         width: 100%;
         height: 100%;
         background-color: rgba(0, 0, 0, 0.8);
-        .modal-content {
+        
+        & .modal-content {
             position: relative;
             margin: auto;
+            top: 10%;
             padding: 20px;
             width: 80%;
             max-width: 700px;
             background-color: #fff;
             border-radius: 10px;
-
-            img {
-                width: 100%;
-                border-radius: 8px;
-            }
-
-            .close-slider {
+            overflow: hidden; 
+            
+            & .close-slider {
                 position: absolute;
                 top: 10px;
                 right: 20px;
                 font-size: 30px;
                 cursor: pointer;
                 color: #333;
-                &:hover {
-                    color: red;
+            }
+        }
+    
+        .slider {
+            display: flex;
+            align-items: center;
+            justify-content: space-between;
+            
+            & .slides {
+                flex-grow: 1;
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                
+                & img {
+                    max-width: 100%;
+                    max-height: 80vh; 
+                    object-fit: contain;
+                    border-radius: 8px;
                 }
             }
-            .slider {
-                display: flex;
-                align-items: center;
-                justify-content: space-between;
-                .slides {
-                    flex-grow: 1;
-                    img {
-                        width: 100%;
-                        border-radius: 8px;
-                    }
-                }
-                button {
-                    background-color: transparent;
-                    border: none;
-                    font-size: 30px;
-                    cursor: pointer;
-                    &:hover {
-                        color: #555;
-                    }
+            
+            button {
+                background-color: transparent;
+                border: none;
+                font-size: 30px;
+                cursor: pointer;
+                color: #333;
+                
+                &:hover {
+                    color: #555;
                 }
             }
         }
     }
-    
 
-    // Certificados
+
+    // Certificates
     #certificados {
         .certificados-list {
             list-style: none;
@@ -256,7 +257,7 @@ main {
     }
 
     // Modal
-    .modal {
+    #modal {
         display: none;
         position: fixed;
         z-index: 1000;
@@ -297,7 +298,7 @@ main {
     }
 
 
-    // Contacto
+    // Contact
     #contacto {
         .contacto-list {
             list-style: none;
@@ -331,4 +332,43 @@ footer {
     bottom: 0;
     width: 100%;
     font-size: 0.9rem;
+}
+
+#scrollTopBtn {
+    display: none;
+    position: fixed;
+    bottom: 5rem;
+    right: 1rem;
+    z-index: 99;
+    font-size: 16px;
+    border: none;
+    outline: none;
+    background-color: $secondary-color;
+    color: white;
+    cursor: pointer;
+    padding: 8px 16px;
+    border-radius: 24px;
+    transition: background-color 0.3s;
+    
+    &:hover {
+        background-color: $primary-color;
+    }
+}
+
+
+//------------------------- MEDIA QUERIES (notebooks / desktop) ------------------------//
+@media only screen and (min-width: 1200px) {
+    header {
+        nav ul {
+            flex-direction: row;
+        }
+    }
+
+    // Slider modal
+    #modal-slider {
+        &.modal-content {
+            top: -10%;
+        }
+    }
+
 }
