--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,5 @@
+@import url("https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Noto+Serif:ital,wght@0,100..900;1,100..900&display=swap");
 * {
   margin: 0;
   padding: 0;
@@ -5,7 +7,7 @@
 }
 
 body {
-  font-family: "Arial", sans-serif;
+  font-family: "Noto Serif", sans-serif;
   color: #FAFAFF;
   background-color: #001021;
   line-height: 1.6;
@@ -43,6 +45,9 @@ main section h2 {
   text-align: center;
   margin-bottom: 1.5rem;
   font-size: 2rem;
+  font-family: "Bebas Neue", sans-serif;
+  font-weight: 400;
+  font-style: normal;
 }
 main #stack .box {
   position: relative;
@@ -61,7 +66,9 @@ main #stack .box h3 {
   background-color: #2e294e;
   padding: 0 1rem;
   color: #FAFAFF;
-  font-weight: bold;
+  font-family: "Bebas Neue", sans-serif;
+  font-style: normal;
+  font-weight: 400;
 }
 main #stack .box .tecnologias {
   display: flex;
@@ -94,6 +101,10 @@ main #proyectos .proyecto {
 main #proyectos .proyecto h3 {
   color: #2e294e;
   margin-bottom: 0.5rem;
+  font-size: 24px;
+  font-family: "Bebas Neue", sans-serif;
+  font-style: normal;
+  font-weight: 400;
 }
 main #proyectos .proyecto .preview {
   position: absolute;
@@ -268,7 +279,10 @@ footer {
   bottom: 5rem;
   right: 1rem;
   z-index: 99;
-  font-size: 16px;
+  font-size: 24px;
+  font-family: "Bebas Neue", sans-serif;
+  font-style: normal;
+  font-weight: 400;
   border: none;
   outline: none;
   background-color: #6b529e;
