--- a/css/styles.css
+++ b/css/styles.css
@@ -151,7 +151,7 @@ main #modal-slider .modal-content {
   padding: 20px;
   width: 80%;
   max-width: 700px;
-  background-color: #fff;
+  background-color: rgba(0, 0, 0, 0.5);
   border-radius: 10px;
   overflow: hidden;
 }
