--- a/css/styles.scss
+++ b/css/styles.scss
@@ -194,7 +194,7 @@ main {
             padding: 20px;
             width: 80%;
             max-width: 700px;
-            background-color: #fff;
+            background-color: rgba(0, 0, 0, 0.5);
             border-radius: 10px;
             overflow: hidden; 
             
